--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciador de Tarefas Diárias</title>
+    <title>Gerenciador de Tarefas</title>
+   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <h1>Gerenciador de Tarefas Diárias</h1>
-    </header>
-
+    <div class="cotainer">
+    <h1>Gerenciador de Tarefas</h1>
+    <div class="inputs">
+        <input type="text" id="task-input" placeholder="Digite a nova tarefa aqui:">
+        <div class="button">
+        <button id="add-task-btn">Adicionar Tarefa</button>
+        <button id="filter-pending-btn">Filtrar Tarefas Pendentes</button>
+    </div>
+  </div>
+    <ul id="listadeTarefas"></ul>
+    </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
